prevent content jump home

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1098,6 +1098,12 @@ HOME
 
 .home-slider-container {
   width: 100vw;
+  position: absolute;
+}
+
+.home-slider-padding {
+  height: 100vh;
+  width: 100%;
 }
 
 .home-slide-container {
